# ExaltedJupiter

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.for_linux  CMakeLists.txt.for_mingw  LICENSE  Makefile  README.md  main.c
inc/: Structures.h  game.h  maps.h  minilib.h
inc/main_menu/: mm_lib.h
inc/test/: test.h
resource/characters/main_hero/: hero_run.psd
resource/framework/SDL2.framework/Versions/A/Headers/: SDL_config.h  SDL_config_minimal.h  SDL_stdinc.h
resource/levels/test/: map_Back.csv  map_Front.csv
src/: game.c  game_old.c  game_old2.c  game_old3.c  game_old_1.c  main.c
src/enemies/: animate_enemy.c  enemy_do_damage.c  get_distance_to_hero.c  get_normalized_x.c  get_normalized_y.c
src/enemies/knight/: create_knight.c  knight_behaviour.c  knight_collision_detect.c  knight_render.c
src/hero/: create_hero.c  hero_collision_detect.c  hero_render.c
src/hero/animation/: animation.c
src/hero/movment/: move_manager.c
src/levels/: isBackground.c  test_lvl.c
src/levels/Map/: Map.c
src/levels/lvl0/: create_level_old.c  create_lvl.c  enemy_generator.c
src/levels/main_menu/: create_lvl.c
src/levels/test/: create_lvl.c  test_camera.c
src/render/: render_hero.c
src/sdl_configs/: sdl_base.c  sdl_initialization.c  sdl_utils.c
src/utils/: error_handler.c  garbage_collector.c  utils.c
